<resources>
    <string name="app_name">MyBvLife</string>
    <string name="txt_login_header">CỔNG THÔNG TIN KHÁCH HÀNG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header_logout">Thoát</string>
    <string name="message_error_system">Có lỗi xảy ra trong quá trình kết nối đến server, vui lòng đăng nhập lại. Nếu lỗi vẫn tồn tại, hãy liên hệ admin để được hỗ trợ.</string>
    <string name="message_error_null_data">Không có dữ liệu trả về từ server, vui lòng liên hệ admin! </string>
    <string name="message_infor_no_folder">Bạn chưa chọn folder để lưu tài liệu, hãy chọn folder!</string>
    <string name="message_error_file_not_found">File không tồn tại, Mời bạn thử lại</string>
    <string name="message_download_success">Tải thành công</string>
    <string name="message_download_unsuccess">Tải về không thành công do kết nối đến server không ổn định, hãy thử lại!</string>
    <string name="message_granted">Bạn đã được cấp quyền ghi vào bộ nhớ, nhưng để bắt đầu cho lần tải về đầu tiên bạn cần khởi động lại ứng dụng.</string>
    <string name="message_denied">Bạn đã hủy cấp quyền truy cập bộ nhớ thiết bị nên không thể tải về, hãy cấp quyền truy cập và thử lại</string>
    <string name="message_error_screen_resolution">Thiết bị của bạn có màn hình quá nhỏ để hiển thị ứng dụng. Hãy thử lại với thiết bị khác!</string>
    <string name="message_error_data">Không có dữ liệu!</string>
    <string name="message_error_network">Chức năng này cần có kết nối mạng, vui lòng kết nối mạng và thử lại!</string>
    <string name="message_error_server">Có lỗi xảy ra phía server hoặc do kết nối mạng của bạn không ổn định, hãy kiểm tra và kết nối lại!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_hint_date">DD/MM/YYYY</string>
    <string name="txt_error_date"><font fgcolor="red">Bạn nhập ngày tra cứu không hợp lệ!</font></string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="txt_Login_Infor_Lisence">Bản quyền @Tổng Công Ty Bảo Việt Nhân Thọ</string>
    <string name="txt_Login_Security">Chính sách bảo mật</string>
    <string name="txt_Login_Contact">Liên hệ</string>
    <string name="txt_Login_Phone">HotLine miễn phí</string>
    <string name="txt_Login_Chat">Chat trực tuyến</string>
    <string name="txt_login_label_username">Tên đăng nhập <font fgcolor="red">(*)</font></string>
    <string name="txt_login_hint_username">Tên đăng nhập</string>
    <string name="txt_login_hint_password">Mật khẩu</string>
    <string name="txt_login_label_password">Mật khẩu <font fgcolor="red">(*)</font></string>
    <string name="txt_login_error_username"><font fgcolor="red">Tài khoản là bắt buộc</font></string>
    <string name="txt_login_error_password"><font fgcolor="red">Mật khẩu là bắt buộc</font></string>
    <string name="txt_Login_Terms">Quy định &amp; điều khoản</string>
    <string name="txt_login_title">ĐĂNG NHẬP</string>
    <string name="hint_verifycode">Mã xác minh</string>
    <string name="txt_btn_login">Đăng Nhập</string>
    <string name="txt_note_sign_up">Bạn chưa có tài khoản?</string>
    <string name="txt_sign_up">Đăng ký</string>
    <string name="txt_forgot_password">Quên tài khoản/mật khẩu</string>
    <string name="txt_back_to_home">Quay lại trang chủ</string>
    <string name="txt_payment">Thanh toán phí bảo hiểm</string>
    <string name="txt_instructions">Hướng dẫn sử dụng</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="message_login_error">Đăng nhập thất bại</string>
    <string name="message_confirm_logout">Bạn có muốn thoát ứng dụng không?</string>
    <string name="txt_checkbox_save_password">Lưu mật khẩu</string>
    <string name="title_header_security">Chính sách bảo mật</string>
    <string name="content_policy">
<![CDATA[

          <span>
            <b>   1. Mật khẩu và đăng nhập </b>
            <br/>
            Để hỗ trợ quý khách có thể tra cứu được thông tin về Tài khoản bảo hiểm hưu trí và hợp đồng hưu trí nhóm, BVNT cung cấp cho quý khách thông tin tra cứu trực tuyến bao gồm:
            <br/>
            - Địa chỉ trang web: <a href="http://huutri.baovietnhantho.com.vn">http://huutri.baovietnhantho.com.vn</a>
            <br/>
            - Tên đăng nhập
            <br/>
            - Mật khẩu
            <br/>
            <br/>
            <b>   2. Bảo mật tài khoản  </b>
            <br/>
            a. Quý khách phải có trách nhiệm bảo mật và giữ gìn tên truy cập, mật khẩu do BVNT cấp để đảm bảo rằng chỉ có duy nhất khách hàng mới có quyền sử dụng dịch vụ Cổng thông tin khách hàng và cần sử dụng mọi biện pháp cần thiết để tránh và ngăn chặn việc sử dụng dịch vụ bởi những người không có thẩm quyền.
            <br/>
            b. Quý khách không nên lưu mật khẩu theo bất kỳ cách nào mà người khác có thể nhận biết, không nên chọn mật khẩu dễ đoán biết như ngày sinh nhật, số điện thoại của bản thân.
            <br/>
            c. Không đặt tùy chọn của trình duyệt web cho phép lưu lại tên và mật khẩu người dùng.
            <br/>
            d. Thoát khỏi hệ thống Cổng thông tin khách hàng khi không sử dụng.
            <br/>
            e. Nếu quý khách nghi ngờ hoặc phát hiện rằng tên đăng nhập, mật khẩu bị lộ, bị mất cắp, quý khách cần lập tức thay đổi mật khẩu của mình. Nếu không thể tự thực hiện, quý khách có thể thông báo ngay cho BVNT thông qua Tổng đài Chăm sóc khách hàng 1900 558899 – nhánh số 4 để được hỗ trợ.
            <br/>
            <br/>
            <b>   2. An toàn thông tin  </b>
            <br/>
            a. BVNT đảm bảo bí mật thông tin liên quan đến tài khoản hưu trí, hợp đồng hưu trí nhóm và các giao dịch của khách hàng theo quy định của pháp luật; cam kết khả năng hoạt động liên tục của hệ thống Cổng thông tin khách hàng; đảm bảo tính toàn vẹn của thông tin trong quá trình xử lý, lưu trữ và truyền nhận giữa BVNT và khách hàng; đảm bảo xác thực và nhận dạng được khách hàng khi khách hàng truy cập và sử dụng dịch vụ Cổng thông tin khách hàng và đảm bảo áp dụng các hình thức bảo vệ khách hàng phù hợp khác.
            <br/>
            b. BVNT có trách nhiệm bảo mật các thông tin cá nhân của khách hàng khi sử dụng dịch vụ Cổng thông tin khách hàng; BVNT không sử dụng thông tin khách hàng vào mục đích khác và cam kết không bán, tiết lộ, rò rỉ các thông tin đó.

          </span>
        ]]>
    </string>
    <string name="txt_payment_detail_from_date">Kỳ phí từ ngày</string>
    <string name="txt_payment_detail_to_date">Kỳ phí đến ngày</string>
    <string name="txt_payment_detail_bill_vnd">Số phí hóa đơn (vnđ):</string>
    <string name="txt_payment_detail_discount_vnd">Số phí chiêt khấu (vnđ):</string>
    <string name="txt_payment_detail_fee_vnd">Số phí phải thu (vnđ):</string>
    <string name="txt_contract_tab_fee_header_list_payment_number">Số giao dịch:</string>
    <string name="txt_contract_tab_fee_header_list_effective_date">Ngày hiệu lực:</string>
    <string name="txt_contract_tab_fee_header_list_total">Tổng:</string>
    <string name="txt_contract_tab_fee_item_list_deduct">Các khoản khấu trừ hàng tháng (vnđ):</string>
    <string name="txt_contract_tab_fee_item_list_manage_contract">Phí quản lý hợp đồng:</string>
    <string name="txt_contract_tab_fee_item_list_risk">Phí rủi ro:</string>
    <string name="txt_contract_tab_fee_item_list_other">Các loại phí và chi phí khác (vnđ):</string>
    <string name="txt_contract_tab_bill_buyer">Bên mua bảo hiểm:</string>
    <string name="txt_contract_tab_bill_fromdate">Kỳ phí từ ngày:</string>
    <string name="txt_contract_tab_bill_todate">Kỳ phí đến ngày:</string>
    <string name="txt_contract_tab_bill_tax_code">Mã số thuế:</string>
    <string name="txt_contract_tab_bill_address">Địa chỉ:</string>
    <string name="txt_contract_tab_bill_contract_number">Số hợp đồng:</string>
    <string name="txt_contract_tab_bill_counselors">Tư vấn viên:</string>
    <string name="txt_contract_tab_notice_effective_date">Ngày hiệu lực:</string>
    <string name="txt_contract_tab_notice_receiver">Người được bảo hiểm:</string>
    <string name="txt_contract_tab_notice_code_tvv">Mã TVV:</string>
    <string name="txt_contract_tab_notice_name_tvv">Tên TVV:</string>
    <string name="txt_contract_tab_notice_company">Công ty:</string>
    <string name="txt_contract_type_phone">Phone</string>
</resources>