<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/layout_padding_default"
    android:paddingLeft="@dimen/dimen_padding_right_value_item_exlist"
    android:paddingRight="@dimen/dimen_padding_right_value_item_exlist"
    android:paddingTop="@dimen/layout_padding_default">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_header_item_expandable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txt_contract_tab_fee_header_list_payment_number" />

        <TextView
            android:id="@+id/tvContractTabFeeNumberPayment"
            style="@style/style_header_item_expandable_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_header_item_expandable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txt_contract_tab_fee_header_list_effective_date" />

        <TextView
            android:id="@+id/tvContractTabFeeProcessEffectiveDate"
            style="@style/style_header_item_expandable_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <TextView
        style="@style/style_header_item_expandable_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_contract_tab_fee_item_list_deduct" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_header_item_expandable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingLeft="@dimen/dimen_padding_left_group_exlist"
            android:text="@string/txt_contract_tab_fee_item_list_manage_contract" />

        <TextView
            android:id="@+id/tvContractTabFeeManageContract"
            style="@style/style_header_item_expandable_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_header_item_expandable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingLeft="@dimen/dimen_padding_left_group_exlist"
            android:text="@string/txt_contract_tab_fee_item_list_risk" />

        <TextView
            android:id="@+id/tvContractTabFeeRisk"
            style="@style/style_header_item_expandable_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_header_item_expandable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingLeft="@dimen/dimen_padding_left_group_exlist"
            android:text="@string/txt_contract_tab_fee_item_list_other" />

        <TextView
            android:id="@+id/tvContractTabFeeOther"
            style="@style/style_header_item_expandable_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_header_item_expandable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txt_contract_tab_fee_header_list_total" />

        <TextView
            android:id="@+id/tvContractTabFeeTotal"
            style="@style/style_header_item_expandable_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvContactTabFeeTypeDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_contract_type_phone"
        android:visibility="gone" />
</LinearLayout>