<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/layout_padding_default"
    android:paddingLeft="@dimen/dimen_padding_right_value_item_exlist"
    android:paddingRight="@dimen/dimen_padding_right_value_item_exlist"
    android:paddingTop="@dimen/layout_padding_default">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_header_item_expandable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txt_contract_tab_notice_effective_date" />

        <TextView
            android:id="@+id/tvContractTabNoticeEffectiveDate"
            style="@style/style_header_item_expandable_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_header_item_expandable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txt_contract_tab_notice_receiver" />

        <TextView
            android:id="@+id/tvContractTabNoticeReceiver"
            style="@style/style_header_item_expandable_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_header_item_expandable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txt_contract_tab_notice_code_tvv" />

        <TextView
            android:id="@+id/tvContractTabNoticeCodeTVV"
            style="@style/style_header_item_expandable_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_header_item_expandable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txt_contract_tab_notice_name_tvv" />

        <TextView
            android:id="@+id/tvContractTabNoticeNameTVV"
            style="@style/style_header_item_expandable_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/style_header_item_expandable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txt_contract_tab_notice_company" />

        <TextView
            android:id="@+id/tvContractTabNoticeCompany"
            style="@style/style_header_item_expandable_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tvContactTabNoticeItemTypeDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_contract_type_phone"
        android:visibility="gone" />
</LinearLayout>